--- a/index4.html
+++ b/index4.html
@@ -7,8 +7,8 @@
     <title>Derrick Rose</title>
 </head>
 <body class="rose4">
-    <h1>Fim</h1>
-    <h2>Após ser trocado várias vezes infelizmente veio a se aposentar, por muitas lesões em sua carreira, e seu ultimo time foi o Menphis Grizzilies, jogando ao lado de Ja Morant. </h2>
+    <h1 class="bls">Fim</h1>
+    <h2 class="chic">Após ser trocado várias vezes infelizmente veio a se aposentar, por muitas lesões em sua carreira, e seu ultimo time foi o Menphis Grizzilies, jogando ao lado de Ja Morant. </h2>
     <img src="https://www.usatoday.com/gcdn/authoring/authoring-images/2024/09/26/USAT/75389433007-usatsi-5301498.jpg?crop=2820,2819,x643,y0" alt="img1">
 <a href="index.html">Início</a>
 </body>
