--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="rose2">
-    <h1>MVP</h1>
-    <h2>Derrick foi eleito o melhor jogador da liga no ano de 2011, assim sendo o mvp mais novo da liga 1 ano após ser draftado</h2>
+    <h1 class="MVP">MVP</h1>
+    <h2 class="dkc">Derrick foi eleito o melhor jogador da liga no ano de 2011, assim sendo o mvp mais novo da liga 1 ano após ser draftado</h2>
     <img src="https://www.usatoday.com/gcdn/authoring/authoring-images/2024/09/26/USAT/75389433007-usatsi-5301498.jpg?crop=2820,2819,x643,y0" alt="img1">
 <a href="index3.html">Lesão</a>
 </body>
