--- a/index3.html
+++ b/index3.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="rose3">
-    <h1>Lesão</h1>
-    <h2>Na mesma temporada emm 22 de novembro, ele machucou o joelho direito durante um jogo contra o Portland Trail Blazers, e foi trocado de time</h2>
+    <h1 class="kcd">Lesão</h1>
+    <h2 class="dr">Na mesma temporada emm 22 de novembro, ele machucou o joelho direito durante um jogo contra o Portland Trail Blazers, e foi trocado de time</h2>
     <img src="Derrick-Rose-3.webp" alt="img1">
 <a href="index4.html">O Fim Da Carreira</a>
 </body>
